retrieve, parse and display items from reddit/android)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.1"
     defaultConfig {
         applicationId "br.mv.redditreader"
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -24,5 +24,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile "com.android.support:support-v4:25.0.1"
+    compile "com.android.support:support-v13:25.0.1"
+    compile "com.android.support:appcompat-v7:25.0.1"
     testCompile 'junit:junit:4.12'
 }
