--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile "com.android.support:support-v4:25.0.1"
     compile "com.android.support:support-v13:25.0.1"
     compile "com.android.support:appcompat-v7:25.0.1"
+    compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
 }
